Remove commons-lang3 from ext/client-proxy and fit/ modules
Replace all commons-lang3 usages with Java standard library equivalents
and lightweight local utility classes:

- Triple record replacing ImmutableTriple (ext/client-proxy)
- ReflectionHelper replacing EqualsBuilder/HashCodeBuilder/ReflectionToStringBuilder
- StringHelper replacing StringUtils substring operations (fit/)
- TestUtils replacing RandomStringUtils (fit/ tests)
- Pair/ImmutablePair replaced with Map.Entry/Map.entry()
- ArrayUtils replaced with inline null/length checks
- StringUtils.isBlank/isNotBlank replaced with null-safe String.isBlank()
- BooleanUtils.toBoolean replaced with Boolean.parseBoolean
- NumberUtils.isCreatable replaced with try-parse utility
- ClassUtils.hierarchy replaced with manual class walker

After this change, commons-lang3 only remains in samples/ (tutorial code).